# jupyter-extractor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/jupyter_extractor/: __init__.py  builder.py  enricher.py  formatter.py  loader.py  main.py  parser.py  sectionizer.py  writer.py
tests/: sample.ipynb
